--- a/cliente/src/app/components/factura/factura.component.html
+++ b/cliente/src/app/components/factura/factura.component.html
@@ -99,37 +99,37 @@
        <tbody>
         <tr>
           <th>
-            Menu
-          </th>
-          <td>
-           
-          </td>
-          <th>
-            Complemento
-          </th>
-          <td>
-           
-          </td>
-          <th>
-            Bebida
-          </th>
-          <td>
-            
-          </td>
-          <th>
-            
-          </th>
-          <td>
-            
-          </td>
-          <th>
             Cantidad
           </th>
           <td>
            
           </td>
           <th>
-            Total
+            Descripcion
+          </th>
+          <td>
+           
+          </td>
+          <th>
+            Precio
+          </th>
+          <td>
+            
+          </td>
+          <th>
+            
+          </th>
+          <td>
+            
+          </td>
+          <th>
+           
+          </th>
+          <td>
+           
+          </td>
+          <th>
+           
           </th>
         </tr>
         <tr>
