tabla de detalle

--- a/cliente/src/app/components/factura/factura.component.html
+++ b/cliente/src/app/components/factura/factura.component.html
@@ -101,9 +101,7 @@
           <th>
             Cantidad
           </th>
-          <td>
-           
-          </td>
+          
           <th>
             Descripcion
           </th>
@@ -113,54 +111,37 @@
           <th>
             Precio
           </th>
-          <td>
-            
-          </td>
-          <th>
-            
-          </th>
-          <td>
-            
-          </td>
-          <th>
-           
-          </th>
-          <td>
-           
-          </td>
-          <th>
-           
-          </th>
+        
         </tr>
         <tr>
           <td tabindex="-1">
-            
+            1
           </td>
           <td tabindex="-1">
-           
+           Combo Familiar 1
+          </td>
+          <td>
+
           </td>
           <td>
             <a tabindex="-1">
-             
+             250.00
             </a>
-          </td>
-          <td tabindex="-1">
-        
-          </td>
-          <td tabindex="-1">
-   
           </td>
         </tr>
         <tr>
           <td tabindex="-1">
-            
+           1 
           </td>
           <td tabindex="-1">
-      
+            Combo Familiar 1
           </td>
           <td>
-            <a tabindex="-1" href="#">
-              
+
+          </td>
+          <td>
+            <a tabindex="-1">
+             250.00 
             </a>
           </td>
           <td tabindex="-1">
