--- a/cliente/src/app/components/perfil/perfil.component.html
+++ b/cliente/src/app/components/perfil/perfil.component.html
@@ -51,7 +51,7 @@
 					</li>
 					<li><a class ="menus" >Entregas</a>
 						<ul>
-							<li><a  class ="menus" href="/pendientes">Pendientes</a></li>
+							<li><a  class ="menus" href="/entrega">Pendientes</a></li>
 						</ul>
 					</li>
 
