--- a/cliente/src/app/components/cocina/cocina.component.html
+++ b/cliente/src/app/components/cocina/cocina.component.html
@@ -6,19 +6,18 @@
 <div class="col-md-2" *ngFor="let detallepedidos of detallepedidos">
     <div class="card text-center">
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-            {{detallepedidos.total}}
+            {{detallepedidos.menu}}
         <!-- <button class="btn btn-danger"></button> -->
-        <button class="btn btn-danger" (click)=eliminarbebidas(bebidas.idbebidas)>Eliminar</button>
+        <button (click)=eliminarbebidas(bebidas.idbebidas)>Terminado</button>
         </div>
         
         <img style="height: 150px; width: 100%; display: block;" src="https://image.freepik.com/vector-gratis/chef-dibujos-animados-pollo-asado_119631-166.jpg" class="card-img-top">
         
     <div class="card-body">
+        <p>{{detallepedidos.descripcion}}</p>
         <p>{{detallepedidos.bebida}}</p>
         <p>{{detallepedidos.complementos}}</p>
-        <p>{{detallepedidos.menu}}</p>
         
-
     </div>
 
     </div>
